Fix visibility

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ a{text-decoration:none;color:#fff} a:active{text-decoration:none;color:#fff;}
     height:500px;
     box-shadow: 0 0 10px #000;
     display: none;
+    visibility: hidden;
 }
 
 .close{height:18px;width:18px;background-color:#333;border-radius:50px;line-height:18px;position:absolute;top:5px;left:5px;box-shadow: inset 0 0 20px #111;cursor:pointer;}
